[package]
name = "sjlj"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
license = "MIT"
homepage = "https://github.com/jordanisaacs/sjlj"
repository = "https://github.com/jordanisaacs/sjlj"
description = "setjmp/longjmp for Rust"

exclude = ["/flake.*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naked-function = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys = "0.2.1"
sc = "0.2.7"
